[package]
name = "disambiseq"
version = "0.1.10"
edition = "2021"
description = "Create unambiguous one-off mismatch libraries for DNA sequences"
repository = "https://github.com/noamteyssier/disambiseq"
documentation = "https://docs.rs/disambiseq"
license = "MIT"
keywords = ["bioinformatics", "sequencing", "DNA", "mismatch"]
categories = ["science"]

[dependencies]
hashbrown = "0.12.3"
